manifests/knowledgebase-app-api/manifest.yaml
---
# Source: knowledgebase-app-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledgebase-app-api
  labels:
    helm.sh/chart: knowledgebase-app-api-0.1.0
    app.kubernetes.io/name: knowledgebase-app-api
    app.kubernetes.io/instance: knowledgebase-app-api
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: knowledgebase-app-api
    app.kubernetes.io/instance: knowledgebase-app-api
---
# Source: knowledgebase-app-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledgebase-app-api
  labels:
    helm.sh/chart: knowledgebase-app-api-0.1.0
    app.kubernetes.io/name: knowledgebase-app-api
    app.kubernetes.io/instance: knowledgebase-app-api
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: knowledgebase-app-api
      app.kubernetes.io/instance: knowledgebase-app-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: knowledgebase-app-api
        app.kubernetes.io/instance: knowledgebase-app-api
    spec:
      serviceAccountName: knowledgebase-app-api
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: knowledgebase-app-api
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          image: "gitea.zengarden.space/zengarden-space/knowledgebase-app-api:main-9c6a099"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 32Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - knowledgebase-app-api
              topologyKey: kubernetes.io/hostname
            weight: 100
---
# Source: knowledgebase-app-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knowledgebase-app-api
  labels:
    helm.sh/chart: knowledgebase-app-api-0.1.0
    app.kubernetes.io/name: knowledgebase-app-api
    app.kubernetes.io/instance: knowledgebase-app-api
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: external
  rules:
    - host: "t.zengarden.space"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: knowledgebase-app-api
                port:
                  number: 80
